--- a/style.css
+++ b/style.css
@@ -4,17 +4,59 @@
   box-sizing: border-box;
 }
 
-body, html {
+body,
+html {
   height: 100%;
   width: 100%;
 }
 
 :root {
-  --bg-primary-color:rgb(14, 14, 14);
-  --text-primary-color:rgb(237, 237, 237);
+  --bg-primary-color: rgb(14, 14, 14);
+  --text-primary-color: rgb(237, 237, 237);
+  --space-s: 1rem;
+  --space-m: 2rem;
+  --space-l: 3rem;
+  --space-xl: 4rem;
 }
 
 html {
   color: var(--text-primary-color);
   background-color: var(--bg-primary-color);
+}
+
+main,
+section {
+  height: 100%;
+  width: 100%;
+  padding: var(--space-m);
+}
+
+section {
+  background-color: rgb(177, 189, 154);
+}
+section .game {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+section .game .infos {
+  display: flex;
+  justify-content: space-between;
+}
+section .game .board {
+  border: 1px solid var(--text-primary-color);
+  display: flex;
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(30px, 1fr));
+}
+section .game .board .block {
+  flex-wrap: nowrap;
+  border: 1px solid var(--text-primary-color);
+}
+
+.red {
+  background-color: red;
 }/*# sourceMappingURL=style.css.map */
