--- a/style.scss
+++ b/style.scss
@@ -1,23 +1,76 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body, html{
-    height:100%;
-    width:100%;
+body,
+html {
+    height: 100%;
+    width: 100%;
 }
 
-:root{
+:root {
 
     // colors
-    --bg-primary-color:rgb(14, 14, 14);
+    --bg-primary-color: rgb(14, 14, 14);
 
-    --text-primary-color:rgb(237, 237, 237);
+    --text-primary-color: rgb(237, 237, 237);
+
+    // Spacing values
+    --space-s: 1rem;
+    --space-m: 2rem;
+    --space-l: 3rem;
+    --space-xl: 4rem;
 }
 
-html{
-    color:var(--text-primary-color);
+html {
+    color: var(--text-primary-color);
     background-color: var(--bg-primary-color);
+}
+
+main,
+section {
+    height: 100%;
+    width: 100%;
+    padding: var(--space-m);
+}
+
+
+section {
+
+    background-color: rgb(177, 189, 154);
+    .game {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        .infos {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .board {
+            border: 1px solid var(--text-primary-color);
+            display: flex;
+            
+            flex-grow: 1;
+
+                display: grid;   
+                grid-template-columns: repeat( auto-fill, minmax(30px, 1fr) );
+                grid-template-rows: repeat( auto-fill, minmax(30px, 1fr) );
+            .block{
+                flex-wrap: nowrap;
+                border: 1px solid var(--text-primary-color);
+
+                
+            }
+        }
+    }
+
+}
+
+.red{
+    background-color: red;
 }
