--- a/style.scss
+++ b/style.scss
@@ -2,9 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body,
+body,main,
 html {
     height: 100%;
     width: 100%;
@@ -14,8 +15,8 @@ html {
 
     // colors
     --bg-primary-color: rgb(14, 14, 14);
-
     --text-primary-color: rgb(237, 237, 237);
+    
 
     // Spacing values
     --space-s: 1rem;
@@ -29,8 +30,8 @@ html {
     background-color: var(--bg-primary-color);
 }
 
-main,
-section {
+
+section{
     height: 100%;
     width: 100%;
     padding: var(--space-m);
@@ -73,4 +74,51 @@ section {
 
 .red{
     background-color: red;
+}
+
+.food{
+    background-color: green;
+}
+
+button{
+    color:rgba(0, 0, 0, 0.433);
+    background-color: white;
+    border: none;
+    border-radius: 3px;
+    padding: 0.7rem 1rem ;
+    transition: all 0.1s ease-out;
+}
+
+.modal{
+    height: 100vh;
+    width:100vw;
+    background-color: rgba(173, 173, 173, 0.479);
+    backdrop-filter: blur(4px);
+    position: fixed;
+    top: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+button:hover{
+    transform: scale(1.05);
+}
+
+.btn-start:hover{
+    background-color: rgb(158, 255, 187);
+}
+
+.modal .start-game,
+.modal .end-game{
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 1rem;
+}
+
+.modal .end-game{
+    display:none;
 }
