--- a/style.scss
+++ b/style.scss
@@ -64,7 +64,7 @@ section {
             .block{
                 flex-wrap: nowrap;
                 border: 1px solid var(--text-primary-color);
-
+                border: none;
                 
             }
         }
@@ -113,8 +113,10 @@ button:hover{
 
 .modal .start-game,
 .modal .end-game{
+height: 100%;
 display: flex;
 flex-direction: column;
+justify-content:center;
 align-items: center;
 gap: 1rem;
 }
